diss: minor stuff in jstp

--- a/jstp.tex
+++ b/jstp.tex
@@ -1,7 +1,7 @@
 \section{***Generalised iLUCK-models (JSTP paper)***}
 \label{sec:jstp}
 
-****short intro from intro and abstract, examples already in Chapter~\ref{cha:intro}
+%****short intro from intro and abstract, examples already in Chapter~\ref{cha:intro}
 
 This section reproduces the work
 ``Imprecision and Prior-Data Conflict in Generalised Bayesian Inference'',
@@ -766,7 +766,7 @@ If a sample mean of $8$ was observed in the numerical example discussed above, w
 $[\yzl ; \yzu] =[3;4]$ had been assumed, we would obtain $\Delta(\;) = 4$,
 formalizing our intuition that prior-data conflict is at hand.
 
-As we argued in Sections~\ref{sec:motivation:pdc} and **intro-here**,
+As we argued in Sections~\ref{sec:motivation:pdc} and \ref{sec:jstp-intro},
 imprecise probability models that allow to take prior information into account
 should lead to more imprecision if prior-data
 conflict is present than in situations where it is not.
@@ -1143,7 +1143,7 @@ tend the more to the sample mean the larger the sample gets.
 
 ***change it or leave it? draw links to other chapters and sections?***
 
-In this ***paper*** we considered generalised Bayesian inference
+In this ***paper***, we considered generalised Bayesian inference
 in a wide class of imprecise probability models. We first
 demonstrated that, in their originally proposed form, these models
 do not react to prior-data conflict and so do not utilise
@@ -1174,7 +1174,8 @@ argumentation to a certain Bayesian setting: we studied how far
 one can go \emph{if} one relies strictly on the generalised Bayes
 rule, transferring sets of priors to sets of posteriors element by
 element via Bayes rule. Alternative learning
-rules, including the approaches enumerated at Section~\ref{sec:jstp-intro} %***paper intro*** %\ref{sec:intro},
+rules, including the approaches enumerated at Section~\ref{sec:jstp-intro},% %***paper intro*** %\ref{sec:intro},
+\footnote{See also the critique regarding the Generalised Bayes' Rule in Section~\ref{sec:updating}.}
 could prove very important as, to use one of the referees'
 felicitous words, ``Bayesian methods cannot allow for surprise, the same is
 true for robustified or generalised Bayesian methods, although these
@@ -1182,18 +1183,22 @@ may hide this shortcoming better. One could argue, therefore, that
 they cannot be used to represent learning.''
 
 \subsection*{Acknowledgements}
-We would like to thank two anonymous referees for their very stimulating comments.
+The authors would like to thank two anonymous referees for their very stimulating comments.
 
 
 
 %\clearpage
 
 
-\section{***Software***}
+\section{The \texttt{luck} Package***} %***Software***}
 
-seperate section, or integrate into jstp?
+seperate section, take short description from abstract for ISIPTA'09 poster?
 
-\section{***Isipta'07 paper***}
 
-seperate section, or integrate into jstp?
+\section{***Isipta'07 paper?***}
+
+%seperate section, or integrate into jstp?
+
+***I would prefer not to include this, or just give a short summary of the contents.***
+
 
