diss: intro for isipta11 and mionr stuff

--- a/intro.tex
+++ b/intro.tex
@@ -62,7 +62,7 @@ along with the theoretical results, Thomas Augustin devised most of the structur
 and contributed most in the introductory and concluding sections.***
 
 ***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
-again with a slight change of notation for consistency with the rest of the material.
+again with a slight change of notation for consistency with the rest of the material presented in this thesis.
 Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.
 In this work, Section~\ref{sec:ibbm} was devised and written primarily by Gero Walter,
 while Section~\ref{sec:weightedinf} was devised and written primarily by Frank Coolen.
