--- a/jstp.tex
+++ b/jstp.tex
@@ -5,7 +5,7 @@
 
 This section reproduces the work
 ``Imprecision and Prior-Data Conflict in Generalised Bayesian Inference'',
-published as an article in the \emph{Journal of Statistical Theory and Practice},
+published as a peer-reviewed article in the \emph{Journal of Statistical Theory and Practice},
 and reprinted as a book chapter in \emph{Imprecision in Statistical Theory and Practice}
 \parencite{Walter2009a}.
 As such, it is reproduced here verbatim,
@@ -92,7 +92,7 @@ underlying common statistical models, in particular with respect to the often ra
 choice of the prior distribution.%
 \footnote{See the description of lower previsions,
 Walley's central formulation of imprecise probability, in Section~\ref{sec:lowerprevisions},
-and the motives from a Bayesian perspective in Section~\ref{sec:motivation}.}
+and the motives from a Bayesian perspective in Section~\ref{sec:motivation:bayesian}.}
 The ambiguity in the prior
 specification, or positively formulated, the quality of prior
 knowledge, can be modelled by considering sets ${\cal M}$ of prior distributions.
@@ -171,7 +171,7 @@ Although \textcite[\S 5.2.2]{1991:walley} explicitly emphasizes this possibility
 express prior-data conflict as one of the main motivations for the
 paradigmatic change from precise to imprecise probability,
 surprisingly little attention has been paid to this issue. The very
-rare exceptions include two short sections in \textcite{1991:walley}, and
+rare exceptions include two short sections in \textcite[p.~6 and \S 5.4]{1991:walley}, and
 the papers by \textcite{1991:pericchi}, \textcite{1994:coolen} and
 \textcite{2005:whitcomb}. Moreover, even the powerful models mentioned
 above, including the IDM under prior information and Quaeghebeur and
