diss: festschrift organising

--- a/appendix1.tex
+++ b/appendix1.tex
@@ -1,8 +1,17 @@
-\chapter{Appendix 1: ***festschrift paper***}
-\label{cha:festschrift}
-
-This is the first appendix.
+\chapter{Appendix}
+%\label{cha:festschrift}
 
 
+\section{Bayesian Linear Regression --- Different Conjugate Models and Their (In)Sensitivity to Prior-Data Conflict}
+\label{sec:festschrift}
+
+This section reproduces the work
+``Bayesian Linear Regression --- Different Conjugate Models and Their (In)Sensitivity to Prior-Data Conflict'',
+published as technical report no.~69 at the Department of Statistics of Ludwig-Maximilians-University Munich (LMU)
+\parencite{Walter2009b}. This technical report is a substantially extended version of a contribution to
+``Statistical Modelling and Regression Structures: Festschrift in Honour of Ludwig Fahrmeir'' \parencite{Walter2010a}.
+As such, it is reproduced here verbatim, ****
+
+\subsubsection*{Abstract}
 
 
