--- a/intro.tex
+++ b/intro.tex
@@ -70,6 +70,10 @@ Here, it was possible to add a few explanatory paragraphs that could not appear 
 Thomas Augustin contributed substantially to all parts of the manuscript,
 especially in the introductory and concluding sections.***
 
+***Section~\ref{sec:festschrift} consists of \textcite{Walter2009b},
+which is a substantially extended version of \textcite{Walter2010a},
+reproduced here with a slight change in notation***
+In this work, ***who did what***
 
 \section{Notation}
 \label{sec:notation}
